// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id Int @id @default(autoincrement())
  username String
  password String
  orders Order[]
}

model Order {
  id Int @id @default(autoincrement())
  date String
  note String

  customer User @relation(fields: [customerId], references: [id])
  customerId Int

  products Product[]
}

model Product {
  id Int @id @default(autoincrement())
  title String
  description String
  price Float
  orders Order[]
}